# routers/commentsRouter_controllers_doks.go
@@ -64,6 +64,15 @@ func init() {
     beego.GlobalControllerRouter["antelope/controllers/doks:DOKSClusterController"] = append(beego.GlobalControllerRouter["antelope/controllers/doks:DOKSClusterController"],
         beego.ControllerComments{
             Method: "GetServerConfig",
+            Router: `/config/:zone`,
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["antelope/controllers/doks:DOKSClusterController"] = append(beego.GlobalControllerRouter["antelope/controllers/doks:DOKSClusterController"],
+        beego.ControllerComments{
+            Method: "GetKubeConfig",
             Router: `/kubeconfig/{projectId}`,
             AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(),
